--- a/css/mp3player.css
+++ b/css/mp3player.css
@@ -20,7 +20,7 @@ body {
     border-radius: 20px;
     box-shadow: 0 40px 100px rgba(0, 0, 0, 2);
     padding: 30px;
-    color: #1375ae;
+    color: #005e32;
     overflow: hidden;
 }
 
@@ -72,7 +72,7 @@ h1 {
     width: 30px;
     height: 30px;
     border-radius: 50%;
-    background-color: #1375ae;
+    background-color: #005e32;
 }
 
 .song-slider {
@@ -135,3 +135,58 @@ h1 {
     transition: 0.5s;
     clip-path: polygon(0 0, 100% 0, 100% 100%, 0 100%);
 }
+
+.play-btn span:nth-child(2) {
+    left: 50%;
+    transform-origin: center;
+}
+
+.play-btn.pause span:nth-child(2) {
+    transform: translateY(-50%) scaleY(0);
+}
+
+.play-btn.pause span:nth-child(1) {
+    width: 35%;
+    left: 53%;
+    transform: translate(-50%, -50%);
+    border-radius: 0;
+    clip-path: polygon(0 0, 100% 50%, 0% 100%);
+}
+
+.play-btn.pause {
+    animation: pulse 2s linear infinite;
+}
+
+@keyframes pulse {
+    0% {
+        box-shadow: 0;
+    }
+    50% {
+        box-shadow: 0 0 0 5px rgba(255, 255, 255, 0.1);
+    }
+    100% {
+        box-shadow: 0 0 0 5px rgba(255, 255, 255, 0.4);
+    }
+}
+
+.btn {
+    width: 40px;
+    height: 40px;
+    background-color: #ffffff;
+    border-radius: 50%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border: none;
+    cursor: pointer;
+}
+
+@keyframes rotate {
+    0% {
+        transform: rotate(0);
+    }
+    100% {
+        transform: rotate(360deg);
+    }
+}
+
